force-app/main/default/objects/Product2/fields/IsOrderable__c.field-meta.xml
<CustomField>
    <fullName>IsOrderable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsOrderable</label>
    <type>Checkbox</type>
</CustomField>